# Pydantic

./: Dockerfile  FREE_HOSTING_GUIDE.md  GITHUB_COPILOT_SETUP.md  HTTP_MCP_INTEGRATION.md  MCP_REPLICATION_COMPLETE.md  README.md  REPLICATION_GUIDE.md  TEST_RESULTS.md  deploy.sh  docker-compose.yml  generate_config.sh  github-mcp-config.json  install_mcp.sh  pyproject.toml  railway.toml  railway_setup.sh  render.yaml  run_server.py  setup_mcp_server.sh  validate_mcp_setup.sh  validate_setup.sh
.devcontainer/: devcontainer.json
.github/chatmodes/: beast.chatmode.md
src/mcp_local_rag/: http_server.py  main.py  simple_http_server.py
