[project]
name = "mcp-local-rag"
version = "1.0.0"
description = "MCP \"server\" that locally performs a RAG search on your input query."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiohttp>=3.12.15",
 "beautifulsoup4>=4.13.5",
 "duckduckgo-search>=8.1.1",
 "mcp[cli]>=1.14.0",
 "requests>=2.32.5",
 "fastapi>=0.116.1",
 "uvicorn[standard]>=0.35.0",
]
[[project.authors]]
name = "Nikhil Kapila"
email = "info@nkapila.me"

[build-system]
requires = [ "hatchling>=1.27.0",]
build-backend = "hatchling.build"

[project.scripts]
mcp-local-rag = "mcp_local_rag.main:mcp.run"
mcp-http-server = "mcp_local_rag.http_server:app"

[tool.setuptools.package-data]
mcp_local_rag = ["embedder/embedder.tflite"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_local_rag"]