[project]
name = "mcp-local-rag"
version = "1.0.0"
description = "MCP \"server\" that locally performs a RAG search on your input query."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "duckduckgo-search",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[[project.authors]]
name = "Nikhil Kapila"
email = "info@nkapila.me"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-local-rag = "mcp_local_rag.main:mcp.run"
mcp-http-server = "mcp_local_rag.http_server:app"

[tool.setuptools.package-data]
mcp_local_rag = ["embedder/embedder.tflite"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_local_rag"]
